Fixed game logic, user can choose who start, sample client in js